--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,8 @@ sudo: required
 services: docker
 
 bfore_install:
-  -docker-compose up --bulid -d
+  -　docker login -u $DOCKER_USERNAME -p $DOCKER_ACCESS_TOKEN
+  -　docker-compose up --bulid -d
 
 script:
   - docker-compose exec --env 'RAILS_ENV=test' web rails db migrate
