--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ services: docker
 
 
 bfore_install:
-  -　docker login -u $DOCKER_USERNAME -p $DOCKER_ACCESS_TOKEN
+  -　docker-login -u $DOCKER_USERNAME -p $DOCKER_ACCESS_TOKEN
   -　docker-compose up --bulid -d
 
 script:
