--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ services: docker
 
 
 bfore_install:
-  -　docker-login -u TOUTA2022 -p 8f6e3b9b-3b62-48bd-9a2d-e182b9fca7de
+  -　docker login -u TOUTA2022 -p 8f6e3b9b-3b62-48bd-9a2d-e182b9fca7de
   -　docker-compose up --bulid -d
 
 script:
