--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,19 @@ services: docker
 
 
 before_install:
-  - docker login -u touta2022 -p 14d42906-0438-4e6c-98e7-9a221f55bbea
   - docker-compose up --build -d
+  - docker login -u "$HEROKU_USERNAME" -p "$HEROKU_API_KEY" registry.heroku.com
 
 script:
   - docker-compose exec --env 'RAILS_ENV=test' web rails db:create
   - docker-compose exec --env 'RAILS_ENV=test' web rails db:migrate
   - docker-compose exec --env 'RAILS_ENV=test' web rails test
+
+deploy:
+  provider: script
+  script:
+    docker build -t registry.heroeku.com/$HEROKU_APP_NAME/web -f Dockerfile.prod .;
+    docker push registry.heroeku.com/$HEROKU_APP_NAME/web;
+    heroku run --app $HEROKU_APP_NAME rails dm:migrate;
+  on:
+    branch: master
