--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,6 @@ deploy:
   script:
     docker build -t registry.heroeku.com/$HEROKU_APP_NAME/web -f Dockerfile.prod .;
     docker push registry.heroeku.com/$HEROKU_APP_NAME/web;
-    heroku run --app $HEROKU_APP_NAME rails dm:migrate;
+    heroku run --app $HEROKU_APP_NAME rails db:migrate;
   on:
     branch: master
